--- a/packages/recorder/src/recorder.css
+++ b/packages/recorder/src/recorder.css
@@ -57,3 +57,7 @@ body.dark-mode .recorder .toolbar-button.toggled.circle-large-filled {
 .recorder .selector-input {
   flex: auto;
 }
+
+.cursor::before {
+  content: "🔴";
+}
